<resources>
    <string name="app_name">MusicApp</string>
    <string name="logo_desctrption">Logo</string>
    <string name="menu_Exercice">Exercices</string>
    <string name="font_poetsenOne">Poetsen One</string>
    <string name="menu_parametre">Paramètres</string>
    <string name="menu_cours">Cours</string>
    <string name="cours_1_notes">Nom des notes</string>
    <string name="separation_des_notes_ton_demi_ton">tons et demis-tons </string>
    <string name="Nom_des_notes">Il existe sept noms de notes : Do, Ré, Mi, Fa, Sol, La et Si.
        Il n'en existe pas d'autres. Ces notes peuvent être modifiées (plus précisément la
        hauteur du son) par les altérations telles que le # (dièse) ou le b (bémol).
        Cette notation française des notes (Do, Ré, Mi, Fa, Sol, La et Si) a été initiée par le moine italien Guido d'Arezzo (XIème siècle) en s'inspirant d'un chant religieux latin : l'Hymne de Saint Jean-Baptiste.
        La première syllabe de chaque vers correspond à une note et c'est pour cela que la note Do se dit également Ut (on a également la clef d'Ut).
    </string>
    <string name="Noms_des_intervalles_musicaux"> Noms des intervalles musicaux </string>
    <string name="intervalle">La définition d'un intervalle en musique est extrêmement simple :
        il s'agit de la distance qui sépare deux notes. Plutôt fastoche à comprendre...
        Par exemple, il existe un intervalle entre un Do et Mi ou entre La et Ré.

Pour rendre les choses plus simples,
        on a donné des noms à ces intervalles
        (intervalle de seconde, de tierce, de quinte...) que nous verrons par la suite.

Mais avant d'entrer dans le détail,
        il faut bien avouer que cette notion, aussi facile à comprendre, est à la base de beaucoup de choses comprendre en théorie musicale. On peut citer par exemple la compréhension des accords, des gammes ou bien encore d'une mélodie.
        La notion d'intervalle sera donc présente aussi bien au niveau harmonique que mélodique.</string>
    <string name="sources_notes">Source : https://www.musiclic.com/les_notes.asp</string>
    <string name="separation">Dans le cadre de la musique occidentale, les intervalles se comptent en tons et demi-tons. Le demi-ton est donc l'intervalle le plus petit et le ton le plus grand. Je ne vous apprends rien si 1 ton c'est 2 fois 1/2 ton. On utilisera cette notion de ton pour rendre les choses plus faciles à lire.
        Mieux vaut dire qu'un intervalle de tierce majeure est de 2 tons au lieu de dire 4 demi-tons</string>
    <string name="sources_intervalle">Source : https://www.musiclic.com/blog/definition-d-un-intervalle.asp</string>
    <string name="source_separation">https://www.musiclic.com/blog/definition-d-un-intervalle.asp</string>
</resources>
