<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/logo_desctrption"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/Menu_mainActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="25dp"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/grey"
                    android:onClick="btn_menu_exercice"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/quiz_icon" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poetsen_one"
                                android:text="@string/menu_Exercice"
                                android:textColor="@color/black"
                                android:textSize="25sp"
                                android:textStyle="bold"
                                />


                        </LinearLayout>

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/ic_chevron_right_black_24dp" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey"
                    android:onClick="btn_menu_parametre"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/parametre_icon" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poetsen_one"
                                android:text="@string/menu_parametre"
                                android:textColor="@color/black"
                                android:textSize="25sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/ic_chevron_right_black_24dp" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey"
                    android:onClick="btn_menu_cours"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/cours_icon" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poetsen_one"
                                android:text="@string/menu_cours"
                                android:textColor="@color/black"
                                android:textSize="25sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/ic_chevron_right_black_24dp" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>