<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CoursActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@color/grey"
                app:cardCornerRadius="35dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/cours_icon" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/nom_note_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/grey"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/poetsen_one"
                        android:gravity="center"
                        android:text="@string/cours_1_notes"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>





            <androidx.cardview.widget.CardView
                android:id="@+id/intervalle_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/grey"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/poetsen_one"
                        android:text="@string/Noms_des_intervalles_musicaux"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:gravity="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/sep_demi_ton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/grey"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/poetsen_one"
                        android:text="@string/separation_des_notes_ton_demi_ton"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:gravity="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </ScrollView>



    </RelativeLayout>

